# python-monorepo-example

./: .gitignore  LICENSE  README.md  noxfile.py  pyproject.toml
